--- a/TODO.txt
+++ b/TODO.txt
@@ -18,3 +18,7 @@ TODO
  [ ] Check UTF-8 Headers
 
  [ ] Check translations
+
+ [ ] Check for outdated unittest statements
+
+ [ ] Check for XXX/BBB statements
