--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 Changelog
 =========
 
-1.0-dev (unreleased)
---------------------
+1.0a1 (unreleased)
+------------------
 
-- Package created using templer
-  []
+- Initial release.
+  [timo]
