--- a/TODO.txt
+++ b/TODO.txt
@@ -19,7 +19,7 @@ TODO
 
  [ ] Check translations
 
- [ ] Check for outdated unittest statements
+ [X] Check for outdated unittest statements
 
  [ ] Check for XXX/BBB statements
 
