New validator: check for debug-like statements
Scan python files and look for debug-like statements like
print or pdbs.

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,9 +7,9 @@ TODO
 
  [ ] Make 1.0a1 release
 
- [ ] Check for pdbs
+ [X] Check for pdbs
 
- [ ] Check for print statements
+ [X] Check for print statements
 
  [X] Check ZPTLint
 
