New validator: find untranslated strings in templates

--- a/TODO.txt
+++ b/TODO.txt
@@ -17,7 +17,7 @@ TODO
 
  [X] Check UTF-8 Headers
 
- [ ] Check translations
+ [X] Check translations
 
  [X] Check for outdated unittest statements
 
